# GRAG-LiveRAG

./: .clinerules  .env.example  .gitignore  .gitmodules  CITATION.cff  LiveRAG_May_12.md  README.md  eval_anova.sh  pyproject.toml  run_anova.sh  setup_path.py  test_import.py
data/: .clineignore  .gitignore
data/evaluation_results/: factor_analysis_average_scores.csv  factor_analysis_average_scores.hyde.tsv  factor_analysis_query_level_scores.csv  factor_analysis_query_level_scores.hyde.tsv
data/generated_qa_pairs/: datamorgana_dataset_20250414_162544.csv  datamorgana_dataset_20250414_181830.tsv  datamorgana_dataset_20250414_183438.n100.tsv  datamorgana_dataset_20250414_203206.n2.tsv  datamorgana_dataset_20250414_211457.n2.tsv  datamorgana_dataset_20250420_164754.n5.tsv  (+40 more)
docs/: 2025_03_18_kun.md  DataMorgana.md  data-morgana-paper.md  oleg2024qppch7.md  shuoqi2025investigation.md  zhuang2024setwise.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
notebooks/: construct_training_data.ipynb  filter_dataset.ipynb  import_test.ipynb  path_test.py  setup_path.py  shorten_answers.ipynb  test-indicies.ipynb  test.ipynb  test_data_morgana.ipynb  test_eval.ipynb
scripts/: analyze_factor_options.py  analyze_factor_options_lite.py  anova_analysis.py  anova_analysis_lite.py  combain_two_tsv_files.py  compare_query_level_evals.py  convert_jsonl_to_tsv.py  create_datamorgana_dataset.py  evaluate.py  fine_tune_falcon.py  format-converter.py  process_eval_results.py  process_eval_results_lite.py  run.py  sample_qa_pairs.py  summarize_eval_results_rows.py  t_test.py
src/: __init__.py  main.py  pythonpath_setup.py
(+215 files in other folders)
