[project]
name = "liverag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3==1.35.88",
    "opensearch-py==2.8.0",
    "torch>=2.0.0,<3.0.0",
    "transformers==4.45.2",
    "python-dotenv==1.0.1",
    "pinecone>=5.0,<6.0.0",
    "pandas>=2.2.3",
    "structlog>=25.2.0",
    "rich>=14.0.0",
    "trectools>=0.0.50",
    "langchain-aws>=0.2.13",
    "sqids>=0.5.1",
    "levenshtein>=0.27.1",
    "sagemaker>=2.230.0",
    "uvicorn>=0.34.2",
    "fastapi>=0.115.12",
    "setproctitle>=1.3.6",
    "jsonlines>=4.0.0",
    "openai>=1.73.0",
    "langchain-openai>=0.3.15",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
]
